# NetScan-AI

./: .gitignore  README.md  package.json  renovate.json
.github/: gemini_code_assist.yaml
.github/workflows/: covecode.yml  publish.yml  rust-ci.yml  rust-clippy.yml  sonarcube.yml  trivy.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commandes/: ai_proxy.rs  flow_matrix.rs  mod.rs  net_capture.rs
src-tauri/src/commandes/import/: mod.rs
src/components/: AIChatPanel.vue  AISetupDialog.vue  ErrorDialog.vue  QuitDialog.vue
src/components/AnalyseView/: BottomLong.vue  LegendComponent.vue  NetworkGraphComponent.vue
src/components/AnalyseView/panels/: ConfigPanel.vue  Filter.vue  ImportPalnel.vue
src/components/AnalyseView/panels/CustomSelector/: interfaceSelector.vue
src/components/NavBar/: TopBar.vue
src/components/NavBar/status-bar/: ChannelStatus.vue  Cpu.vue  InterfaceStatus.vue  StatusBar.vue  Timer.vue
src/components/homeVue/: Capture.vue  FromPcap.vue
src/errors/: capture.ts
src/services/: aiService.ts
src/store/: ai.ts  capture.ts
src/types/: capture.ts
src/utils/: save.js
src/views/: analyseView.vue  homeView.vue
