[package]
name = "netscan-ai"
version = "0.1.0"
description = "AI-powered network traffic analyzer — fork of Sonar"
authors = ["apanchoo"]
edition = "2024"
repository = "https://github.com/apanchoo/NetScan-AI"
license = "AGPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
tauri-plugin-log = "2.8.0"

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-process = "2.3.1"

pcap = "2.4.0"
packet_parser = "1.1.0"

thiserror = "2.0.18"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
log = "0.4.29"
chrono = "0.4.44"
rayon = "1.11.0"
tokio = "1.50.0"

ouroboros = "0.18.5"

libc = "0.2.182"
tauri-plugin-fs = "2"
reqwest = { version = "0.13", default-features = false, features = ["json"] }

csv = "1.4.0"
dirs = "6.0.0"

colored = "3.1.1"
tauri-plugin-os = "2"
sysinfo = "0.38.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
